--- a/LendingSystem/Web.config
+++ b/LendingSystem/Web.config
@@ -11,8 +11,7 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-LendingSystem-20200120095336.mdf;Initial Catalog=aspnet-LendingSystem-20200120095336;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=localhost;Initial Catalog=mlis;Persist Security Info=True;User ID=sa;Password=1234" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
