--- a/LendingSystem/Web.config
+++ b/LendingSystem/Web.config
@@ -11,7 +11,8 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=localhost;Initial Catalog=mlis;Persist Security Info=True;User ID=sa;Password=1234" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=localhost;Initial Catalog=mlis;Persist Security Info=True;User ID=sa;Password=innosoft"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
