--- a/LendingSystem/LendingSystem.csproj
+++ b/LendingSystem/LendingSystem.csproj
@@ -205,11 +205,14 @@
   <ItemGroup>
     <Compile Include="ApiControllers\ApiMstCustomerController.cs" />
     <Compile Include="ApiControllers\ApiSysCurrentController.cs" />
+    <Compile Include="ApiControllers\ApiTrnCollectionController.cs" />
     <Compile Include="ApiControllers\ApiTrnLoanController.cs" />
     <Compile Include="ApiModels\MstCustomerModel.cs" />
     <Compile Include="ApiModels\MstInterestModel.cs" />
+    <Compile Include="ApiModels\MstPayTypeModel.cs" />
     <Compile Include="ApiModels\MstTermModel.cs" />
     <Compile Include="ApiModels\MstUserModel.cs" />
+    <Compile Include="ApiModels\TrnCollectionModel.cs" />
     <Compile Include="ApiModels\TrnLoanModel.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
@@ -325,6 +328,7 @@
     <Content Include="Views\Software\UserDetail.cshtml" />
     <Content Include="Views\Software\CustomerProfile.cshtml" />
     <Content Include="Views\Software\CustomerLoanDetail.cshtml" />
+    <Content Include="Views\Software\Reports.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
