--- a/LendingSystem/LendingSystem.csproj
+++ b/LendingSystem/LendingSystem.csproj
@@ -204,6 +204,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApiControllers\ApiMstCustomerController.cs" />
+    <Compile Include="ApiControllers\ApiRepReportsController.cs" />
     <Compile Include="ApiControllers\ApiSysCurrentController.cs" />
     <Compile Include="ApiControllers\ApiTrnCollectionController.cs" />
     <Compile Include="ApiControllers\ApiTrnLoanController.cs" />
