--- a/LendingSystem/Web.config
+++ b/LendingSystem/Web.config
@@ -13,6 +13,8 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=localhost;Initial Catalog=mlis;Persist Security Info=True;User ID=sa;Password=innosoft"
       providerName="System.Data.SqlClient" />
+    <add name="mlisConnectionString" connectionString="Data Source=localhost;Initial Catalog=mlis;Persist Security Info=True;User ID=sa"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
